added blue lantern

--- a/src/main/resources/assets/paperlantern/lang/en_us.json
+++ b/src/main/resources/assets/paperlantern/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.paperlantern.lantern": "Paper Lantern"
+  "item.paperlantern.lantern": "Paper Lantern",
+  "item.paperlantern.blue_lantern": "Blue Paper Lantern"
 }
